[package]
name = "iai-compare-action"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]


[dependencies]
octocrab = { version = "0.9", default-features = false, features = ["rustls"] }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-5"]
